Page MenuHome GnuPG

Kleopatra: Fetch missing keys broken
Closed, ResolvedPublic

Description

When I use "Fetch missing keys" in the certifications view and there are certifications to check I get:

16:23:36.956 QObject::connect|?kleopatra?|?kleopatra?|?kleopatra?|?kleopatra? QObject::connect: No such slot Kleo::ImportCertificateFromKeyserverCommand::importResult(GpgME::ImportResult) in /home/aheinecke/dev/main/src/kleopatra/src/commands/importcertificatescommand.cpp:938
16:23:36.956 org.kde.pim.kleopatra: Kleo::ImportCertificatesCommand::Private::increaseProgressMaximum increaseProgressMaximum progress: 0 / 35
16:23:36.956 QObject::connect|?kleopatra?|?kleopatra?|?kleopatra?|?kleopatra? QObject::connect: No such slot Kleo::ImportCertificateFromKeyserverCommand::importResult(GpgME::ImportResult) in /home/aheinecke/dev/main/src/kleopatra/src/commands/importcertificatescommand.cpp:938
16:23:36.956 org.kde.pim.kleopatra: Kleo::ImportCertificatesCommand::Private::increaseProgressMaximum increaseProgressMaximum progress: 0 / 36

The progress never advances. When I then click on cancel in the progress dialog it crashes with a segmentation fault.

Revisions and Commits

Event Timeline

aheinecke created this task.
ikloecker changed the task status from Open to Testing.Aug 26 2022, 12:23 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a project: Restricted Project.
ikloecker added a subscriber: ikloecker.

Fixed

werner removed a project: Restricted Project.Sep 22 2022, 10:46 AM

works. Tested on 3.1.26 with AD configured as keyserver.

But I'm missing an "imported certificates" tab for the imported key(s). Usually I do not care for that tab but in this case it would be useful.
And it's debatable if in such an import scenario the "do you want to certify the user" should pop up. But maybe this already depends on how many certificates are imported at once? (I've only tested with one)

ebo claimed this task.

Because of the imported certificates tab I mention T6447 and T6183 for the certify question. Closing.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 19 2023, 9:26 AM