Fix broken signal-slot connection

The private slot in the header is probably never declared because the
define in the #ifdef isn't defined when moc parses the file. In any case,
there's no reason to keep using an old-style connect.

GnuPG-bug-id: 6163