src/commands/importcertificatescommand.cpp
@@ -934,8 +934,9 @@ void ImportCertificatesCommand::Private::startImport(GpgME::Protocol protocol, [
     keyCacheAutoRefreshSuspension = KeyCache::mutableInstance()->suspendAutoRefresh();
 
     std::vector<QMetaObject::Connection> connections = {
-        connect(job.get(), SIGNAL(result(GpgME::ImportResult)),
-                q, SLOT(importResult(GpgME::ImportResult))),
+        connect(job.get(), &AbstractImportJob::result, q, [this](const GpgME::ImportResult &result) {
+            importResult(result);
+        }),
         connect(job.get(), &Job::progress,
                 q, &Command::progress)
     };
